Add international call to the application-User can select a prefix number from a foreign contry and make a call.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         </activity>
         <activity android:name=".SmsActivity"/>
         <activity android:name=".CallActivity"/>
+        <activity android:name=".InternationalCallActivity"/>
+        <activity android:name=".SelectPrefixActivity"/>
     </application>
 
 </manifest>
